# JunCore

./: .gitignore  Readme.md
Docker/: docker-compose.yml  dockerfile
JunCore/: CMakeLists.txt  CMakePresets.json  conanfile.txt  vcpkg.json
JunCore/src/: CMakeLists.txt
JunCore/src/EchoClient/: CMakeLists.txt  main.cpp
JunCore/src/EchoClient/network/: EchoClient.cpp  EchoClient.h
JunCore/src/EchoClient/packet/: packet.pb.cc  packet.pb.h  packet.proto  patch_proto.bat
JunCore/src/EchoServer/: CMakeLists.txt  main.cpp
JunCore/src/EchoServer/network/: EchoServer.cpp  EchoServer.h
JunCore/src/EchoServer/packet/: packet.pb.cc  packet.pb.h
JunCore/src/NetworkCore/: CMakeLists.txt
JunCore/src/NetworkCore/Packets/: PacketBuffer.cpp  PacketBuffer.h  PacketHeader.h
JunCore/src/NetworkCore/network/: AsyncAcceptor.cpp  AsyncAcceptor.h  NetworkCore.cpp  NetworkCore.h  NetworkManager.cpp  NetworkManager.h  NetworkSession.cpp  NetworkSession.h  NetworkThread.cpp  NetworkThread.h  Session.cpp  Session.h
JunCore/src/common/: CMakeLists home.txt  CMakeLists tmp.txt  CMakeLists.txt  Common.h  Define.h  RingBuffer.cpp  RingBuffer.h  ring_buffer.cpp  ring_buffer.h
JunCore/src/common/Time/: Timer.h
JunCore/src/common/Utilities/: MessageBuffer.h
JunCore/src/echo_client/: CMakeLists.txt  main.cpp
JunCore/src/echo_client/network/: EchoClient.h
JunCore/src/echo_client/packet/: packet.pb.h
JunCore/src/echo_server/: CMakeLists.txt  main.cpp
JunCore/src/echo_server/network/: EchoPacket.h  EchoServer.cpp  EchoServer.h  EchoSocket.cpp  EchoSocket.h  EchoSocketMgr.cpp  EchoSocketMgr.h
JunCore/src/echo_server/network/Protocol/: ServerPktHeader.h
JunCore/src/network_core/: CMakeLists.txt
JunCore/src/network_core/common/: MessageBuffer.h  types.h
JunCore/src/network_core/network/: AsyncAcceptor.cpp  AsyncAcceptor.h  NetworkManager.cpp  NetworkManager.h  NetworkThread.cpp  NetworkThread.h  Session.cpp  Session.h
JunCore/src/network_core/packet/: PacketBuffer.cpp  PacketBuffer.h
JunCore/src/server/game/: CMakeLists.txt
JunCore/src/server/game/Server/: WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h
JunCore/src/server/game/World/: World.cpp  World.h
JunCore/src/server/shared/: CMakeLists.txt
JunCore/src/server/shared/Networking/: AsyncAcceptor.h  NetworkThread.h  Socket.h  SocketMgr.h
JunCore/src/server/shared/Packets/: ByteBuffer.h
JunCore/src/server/worldserver/: main.cpp
JunCore/src/server_core/: CMakeLists.txt
JunCore/src/server_core/Packets/: ByteBuffer.cpp  ByteBuffer.h  PacketBuffer.cpp  PacketBuffer.h  packet_header.h
JunCore/src/server_core/network/: AsyncAcceptor.cpp  AsyncAcceptor.h  NetworkThread.h  Socket.h  SocketMgr.h
JunCore/test/: CMakeLists.txt  main.cpp
JunCore_Backup/JunCore/src/common/: CMakeLists.txt
JunCore_Backup/JunCore/src/server/game/Server/: WorldSession.h  WorldSocketMgr.cpp
JunCore_Backup/JunCore/src/server/game/World/: World.h
JunCore_Backup/JunCore/src/server/shared/Networking/: AsyncAcceptor.h  SocketMgr.h
JunCore_Backup/JunCore/src/server/worldserver/: main.cpp
OtherProjects/JunCore_Backup/JunCore/src/common/: data_type.h
OtherProjects/JunCore_Backup/JunCore/src/common/Utilities/: MessageBuffer.h
OtherProjects/JunCore_Backup/JunCore/src/server/game/: CMakeLists.txt
OtherProjects/JunCore_Backup/JunCore/src/server/game/Server/: WorldPacket.h  WorldSession.cpp  WorldSocket.cpp
OtherProjects/JunCore_Backup/JunCore/src/server/worldserver/: CMakeLists.txt
OtherProjects/Protobuf Test/cmake protobuf build/: CMakeLists.txt
OtherProjects/Protobuf Test/cmake protobuf build/src/: CMakeLists.txt  addressbook.pb.cc  addressbook.pb.h  main.cpp
OtherProjects/Protobuf Test/sln protobuf build/: Project1.sln
OtherProjects/Protobuf Test/sln protobuf build/Project1/: Project1.vcxproj  Project1.vcxproj.filters  addressbook.pb.h  main.cpp
OtherProjects/Test/: CMakeLists.txt
OtherProjects/Test/include/asio/: executor.hpp
OtherProjects/Test/include/asio/detail/impl/: service_registry.ipp  throw_error.ipp
OtherProjects/Test/include/asio/impl/: io_context.ipp
OtherProjects/Test/include/rapidjson/: document.h  schema.h
OtherProjects/Test/include/rapidjson/msinttypes/: stdint.h
OtherProjects/Test/src/: CMakeLists.txt  main.cpp
OtherProjects/TmpServer/: CMakeLists.txt
OtherProjects/TmpServer/AsioServer/: CMakeLists.txt
OtherProjects/TmpServer/ProtobufTest/: CMakeLists.txt  main.cpp  person.pb.cc  person.pb.h
OtherProjects/TmpServer/ProtobufTest/protobuf/google/protobuf/: port_def.inc
OtherProjects/TmpServer/Test/: CMakeLists.txt  main.cpp  test_1.cpp
OtherProjects/TmpServer/WinClient/: main.cpp
OtherProjects/lib Link Test/Test/: CMakeLists.txt  CMakePresets.json
OtherProjects/lib Link Test/Test/Test/: CMakeLists.txt  main.cpp
OtherProjects/protobuf visual studio/Project1/: addressbook.pb.cc  main.cpp
OtherProjects/test protobuf project 2/MyProtobufProject/: CMakeLists.txt
OtherProjects/test protobuf project 2/MyProtobufProject/src/: CMakeLists.txt  main.cpp
OtherProjects/test_client_2/: test_client_2.uproject
OtherProjects/test_client_2/Binaries/Win64/: UnrealEditor-test_client_2.patch_0.exp  UnrealEditor.modules  test_client_2Editor.target
OtherProjects/test_client_2/Config/: DefaultEngine.ini  DefaultGame.ini
OtherProjects/test_client_2/Content/StarterContent/Architecture/: Floor_400x400.uasset
OtherProjects/test_client_2/Saved/Config/WindowsEditor/: EditorPerProjectUserSettings.ini
OtherProjects/test_client_2/Saved/SourceControl/: UncontrolledChangelists.json
OtherProjects/test_client_2/Saved/Telemetry/: Telemetry.json
OtherProjects/test_client_2/Source/: test_client_2.Target.cs  test_client_2Editor.Target.cs
OtherProjects/test_client_2/Source/test_client_2/: MyGameInstance.cpp  MyGameInstance.h  NetworkClient.cpp  NetworkClient.h  test_client_2.Build.cs  test_client_2.cpp
TmpServer/: CMakeLists.txt
TmpServer/AsioServer/: main.cpp
TmpServer/Test/: main.cpp
TmpServer/WinServer/: main.cpp
(+1 files in other folders)
